# ragondin

./: .gitignore  Makefile  README.md  README.template.md  pyproject.toml  requirements.txt
docs/: installation.md  introduction.md  process.md  quickstart.md
docs/architecure/: file_structure.md
docs/config/: main.md
old/: chunk_index.py  collector.py  project.py  vectordb.py
ragondin/: cli.py
ragondin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ragondin/core/: active.py  embeddings.py  prompt_builder.py  retriever.py  splitter.py  vectordb.py
src/ragondin/: __init__.py  cli.py
src/ragondin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ragondin/cli/: __init__.py  ask_cmd.py  config_cmd.py  debug_cmd.py  main.py  process_cmd.py  project_cmd.py  sources_cmd.py  utils.py
src/ragondin/config/: constants.py  defaults.py  manager.py
src/ragondin/core/: collector.py  (+5 more)
tests/: __init__.py  conftest.py  fake_embeddings.py  test_cli.py  test_indexing_collector.py  test_indexing_hash.py  test_indexing_pipeline.py  test_indexing_splitter_integration.py  test_metadata.py  test_retriever.py  test_splitter.py  test_vectordb.py
tests/test_cli/: test_cli_ask.py  test_cli_connect.py  test_cli_create.py  test_cli_disconnect.py  test_cli_process.py  test_cli_status.py
tests/test_indexing/: fake_embeddings.py  fake_vectordb.py  test_collector.py  test_hashing.py  test_pipeline.py  test_splitter.py
tests/test_project/: test_active.py  test_model.py
tests/test_retrieval/: test_reranker.py  test_retriever.py
tools/: build_readme.py
(+15 files in other folders)
